# ChurnGuard

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: dashboard.py
config/: config.yaml
models/: churn_model.joblib  metadata.json
notebooks/: 01_exploratory_analysis.ipynb
scripts/: generate_data.py  train_model.py
src/analysis/: hypothesis_testing.py
src/api/: main.py
src/api/routes/: analytics.py  health.py  predictions.py
src/api/schemas/: customer.py
src/models/: predictor.py
src/pipeline/: data_ingestion.py  model_trainer.py  preprocessing.py
tests/: test_api.py  test_hypothesis.py  test_pipeline.py
